--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "react": "^18",
     "react-dom": "^18",
     "react-dropzone": "^14.2.3",
+    "react-hot-toast": "^2.4.1",
     "react-intersection-observer": "^9.13.1",
     "react-linkify-it": "^1.0.8",
     "react-textarea-autosize": "^8.5.3",
