--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "lucia": "^3.2.0",
     "lucide-react": "^0.437.0",
     "next": "14.2.7",
+    "next-nprogress-bar": "^2.3.13",
     "postgres": "^3.4.4",
     "react": "^18",
     "react-dom": "^18",
