--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@lucia-auth/adapter-drizzle": "^1.1.0",
     "@mantine/hooks": "^7.12.2",
     "@popperjs/core": "^2.11.8",
+    "@ramonak/react-progress-bar": "^5.3.0",
     "@supabase/ssr": "^0.5.1",
     "@supabase/supabase-js": "^2.45.3",
     "@tanstack/react-query": "^5.53.1",
