--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "date-fns": "^3.6.0",
     "dotenv": "^16.4.5",
     "drizzle-orm": "^0.33.0",
+    "embla-carousel-react": "^8.3.0",
     "framer-motion": "^11.5.4",
     "ky": "^1.7.1",
     "lucia": "^3.2.0",
